tests/snapshots/r#mod__parser__ical.snap
---
source: tests/mod.rs
expression: res.unwrap()
---
IcalCalendar {
    properties: [
        Property {
            name: "CALSCALE",
            params: [],
            value: Some(
                "GREGORIAN",
            ),
        },
        Property {
            name: "PRODID",
            params: [],
            value: Some(
                "-//Example Inc.//Example Calendar//EN",
            ),
        },
        Property {
            name: "VERSION",
            params: [],
            value: Some(
                "2.0",
            ),
        },
    ],
    events: [
        IcalEvent {
            properties: [
                Property {
                    name: "DTSTAMP",
                    params: [],
                    value: Some(
                        "20080205T191224Z",
                    ),
                },
                Property {
                    name: "DTSTART",
                    params: [
                        (
                            "VALUE",
                            [
                                "DATE",
                            ],
                        ),
                    ],
                    value: Some(
                        "20081006",
                    ),
                },
                Property {
                    name: "SUMMARY",
                    params: [],
                    value: Some(
                        "Planning meeting",
                    ),
                },
                Property {
                    name: "UID",
                    params: [],
                    value: Some(
                        "4088E990AD89CB3DBB484909",
                    ),
                },
            ],
            alarms: [
                IcalAlarm {
                    properties: [
                        Property {
                            name: "SUMMARY",
                            params: [],
                            value: Some(
                                "escaped\\, comma and\\; semicolon\\nnewline",
                            ),
                        },
                    ],
                },
            ],
        },
    ],
    alarms: [],
    todos: [],
    journals: [],
    free_busys: [],
    timezones: [],
}
